--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Runebound 3 Coin</string>
     <string name="changeLang">Language</string>
     <string name="startButton">Start</string>
+    <string name="english">english</string>
+    <string name="polish">polish</string>
+    <string name="accept">accept</string>
 </resources>
