--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="heroname">heroName</string>
     <string name="playername">playerName</string>
+    <string name="pickHero">pick a hero</string>
 </resources>
