work on hero selection screen

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -6,4 +6,6 @@
     <string name="english">angielski</string>
     <string name="polish">polski</string>
     <string name="accept">zaakceptuj</string>
+    <string name="pickHero">Wybierz bohatera!</string>
+    <string name="playername">Imię gracza</string>
 </resources>
